[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://game_screen/popup_sign.gd" type="Script" id=2]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Sign" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 160, 32, 32 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="ZContainer" type="Node2D" parent="."]
z_index = 2

[node name="PanelContainer" type="PanelContainer" parent="ZContainer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.0
margin_top = -79.0
margin_right = 42.0
margin_bottom = -32.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ZContainer/PanelContainer"]
margin_left = 9.0
margin_top = 17.0
margin_right = 75.0
margin_bottom = 30.0
align = 1
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="resized" from="ZContainer/PanelContainer" to="." method="_on_PanelContainer_resized"]
